<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >
        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center" >
            <EditText
                android:inputType="textWebEditText"
                android:hint="@string/username"
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:paddingRight="60dp"
                android:maxLength="20"
                android:paddingLeft="55dp" >
            </EditText>
            <ImageView
                android:layout_width="22dp"
                android:layout_height="21dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/account"
                android:visibility="visible" />
            <TextView
                android:id="@+id/contry_sn"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="+62"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bt_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/button_clear"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >
            <EditText

                android:hint="@string/password"
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:paddingRight="60dp"
                android:maxLength="20"
                android:paddingLeft="55dp" >
            </EditText>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/lock" />
            <Button
                android:id="@+id/bt_pwd_eye"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/button_eye"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/phonenumber_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usercode_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >
            <EditText

                android:hint="@string/phone"
                android:id="@+id/phonenumber"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:paddingRight="60dp"
                android:maxLength="20"
                android:paddingLeft="55dp" >
            </EditText>


        </FrameLayout>
        <LinearLayout
            android:id="@+id/photo_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phonenumber_layout">
        <ImageButton

            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_monochrome_photos_black_36dp"
            />
        <TextView
            android:id="@+id/textview"
            android:text="点击按钮上传自己的正脸照片"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/take_photo"
            />
    </LinearLayout>
        <ImageView
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:id="@+id/imageview"
            android:layout_below="@id/photo_linear"
            android:layout_width="200dp"
            android:layout_height="200dp" />

    </RelativeLayout>
    <Button

        android:layout_alignParentBottom="true"
        android:onClick="register"
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="50dp"

        android:layout_marginTop="30dp"
        android:background="#0682AF"
        android:textColor="@android:color/white"

        android:gravity="center"
        android:text="注册" />
</RelativeLayout>
